refactor: enhance comments and code quality and remove redundent methods